{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 3,
  "lineage": "6d33092e-29ad-6765-cf6b-175997562a95",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:network-acl/acl-0e2fb2ea3c03650a0",
            "default_network_acl_id": "acl-0e2fb2ea3c03650a0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e2fb2ea3c03650a0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "803035318642",
            "subnet_ids": [
              "subnet-008a9917afdff49f4",
              "subnet-00a93b97fbdce7bb1",
              "subnet-01a9fe393503b760a",
              "subnet-030265ae3c7c61edc",
              "subnet-076c0ef7dc7936d83",
              "subnet-0e0ef94301d989243"
            ],
            "tags": {
              "Name": "axon-10-4-default",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-default",
              "type": "production"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:route-table/rtb-0dcf05e1cde5e8a48",
            "default_route_table_id": "rtb-0dcf05e1cde5e8a48",
            "id": "rtb-0dcf05e1cde5e8a48",
            "owner_id": "803035318642",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "axon-10-4-default",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-default",
              "type": "production"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:security-group/sg-0a0db2b53aea86bd7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a0db2b53aea86bd7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "803035318642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "axon-10-4-default",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-default",
              "type": "production"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0c4707231681d33",
            "association_id": "eipassoc-06e3a85751d941e3e",
            "domain": "vpc",
            "id": "eipalloc-0b0c4707231681d33",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b2f951a607ec53c1",
            "private_dns": "ip-10-4-171-236.ec2.internal",
            "private_ip": "10.4.171.236",
            "public_dns": "ec2-18-232-8-250.compute-1.amazonaws.com",
            "public_ip": "18.232.8.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "axon-10-4-us-east-1a",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-us-east-1a",
              "type": "production"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:internet-gateway/igw-089769b83c47f3137",
            "id": "igw-089769b83c47f3137",
            "owner_id": "803035318642",
            "tags": {
              "Name": "axon-10-4",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4",
              "type": "production"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0c4707231681d33",
            "association_id": "eipassoc-06e3a85751d941e3e",
            "connectivity_type": "public",
            "id": "nat-05500c5cb24b8fe6b",
            "network_interface_id": "eni-0b2f951a607ec53c1",
            "private_ip": "10.4.171.236",
            "public_ip": "18.232.8.250",
            "subnet_id": "subnet-008a9917afdff49f4",
            "tags": {
              "Name": "axon-10-4-us-east-1a",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-us-east-1a",
              "type": "production"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b12f13a6020052d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05500c5cb24b8fe6b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b12f13a6020052d7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-089769b83c47f3137",
            "id": "r-rtb-0cf3c880b1ffe67011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf3c880b1ffe6701",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:route-table/rtb-0b12f13a6020052d7",
            "id": "rtb-0b12f13a6020052d7",
            "owner_id": "803035318642",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05500c5cb24b8fe6b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "axon-10-4-private",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-private",
              "type": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:route-table/rtb-0cf3c880b1ffe6701",
            "id": "rtb-0cf3c880b1ffe6701",
            "owner_id": "803035318642",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089769b83c47f3137",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "axon-10-4-public",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-public",
              "type": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00244d627bc4ffeac",
            "route_table_id": "rtb-0b12f13a6020052d7",
            "subnet_id": "subnet-01a9fe393503b760a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b38aeb0f524b7073",
            "route_table_id": "rtb-0b12f13a6020052d7",
            "subnet_id": "subnet-00a93b97fbdce7bb1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0648cbff6a2e1059c",
            "route_table_id": "rtb-0b12f13a6020052d7",
            "subnet_id": "subnet-076c0ef7dc7936d83"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec02e7a3533419a2",
            "route_table_id": "rtb-0cf3c880b1ffe6701",
            "subnet_id": "subnet-008a9917afdff49f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092a1d853adf19937",
            "route_table_id": "rtb-0cf3c880b1ffe6701",
            "subnet_id": "subnet-0e0ef94301d989243"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084ba8c05c078bccc",
            "route_table_id": "rtb-0cf3c880b1ffe6701",
            "subnet_id": "subnet-030265ae3c7c61edc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:subnet/subnet-01a9fe393503b760a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.4.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a9fe393503b760a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803035318642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "axon-10-4-private-us-east-1a",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-private-us-east-1a",
              "type": "production"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:subnet/subnet-00a93b97fbdce7bb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.4.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a93b97fbdce7bb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803035318642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "axon-10-4-private-us-east-1b",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-private-us-east-1b",
              "type": "production"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:subnet/subnet-076c0ef7dc7936d83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.4.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076c0ef7dc7936d83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803035318642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "axon-10-4-private-us-east-1c",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4-private-us-east-1c",
              "type": "production"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:subnet/subnet-008a9917afdff49f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.4.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008a9917afdff49f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803035318642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "axon-public-subnet",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-public-subnet",
              "type": "production"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:subnet/subnet-0e0ef94301d989243",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.4.192.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0ef94301d989243",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803035318642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "axon-public-subnet",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-public-subnet",
              "type": "production"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:subnet/subnet-030265ae3c7c61edc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.4.224.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030265ae3c7c61edc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803035318642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "axon-public-subnet",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-public-subnet",
              "type": "production"
            },
            "vpc_id": "vpc-0d19730efc69cf3eb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803035318642:vpc/vpc-0d19730efc69cf3eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0e2fb2ea3c03650a0",
            "default_route_table_id": "rtb-0dcf05e1cde5e8a48",
            "default_security_group_id": "sg-0a0db2b53aea86bd7",
            "dhcp_options_id": "dopt-0ba5706a9c47f7960",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d19730efc69cf3eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dcf05e1cde5e8a48",
            "owner_id": "803035318642",
            "tags": {
              "Name": "axon-10-4",
              "type": "production"
            },
            "tags_all": {
              "Name": "axon-10-4",
              "type": "production"
            }
          }
        }
      ]
    }
  ]
}